# Loop-SCI

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.superpowers/sdd/: task-10-report.md  task-12-report.md  task-7-report.md  task-9-report.md
conf/: config.yaml
conf/agent/: default.yaml
conf/engine/: default.yaml
conf/hypothesis/: default.yaml
conf/plan/: default.yaml
conf/provider/: bailian.yaml
conf/run/: default.yaml
docs/superpowers/handoffs/: 2026-07-15-next-round-handoff.md
docs/superpowers/plans/: 2026-07-14-arbor-qwen-skeleton.md  2026-07-14-hypothesis-engine.md  2026-07-14-literature-mining.md  2026-07-14-research-plan-assembler.md
docs/superpowers/reports/: 2026-07-14-arbor-qwen-skeleton-verify.md  2026-07-14-hypothesis-engine-verify.md  2026-07-14-literature-mining-verify.md  (+1 more)
loop_sci/: __init__.py  cli.py
loop_sci/_vendor/arbor/: agent.py  (+3 more)
loop_sci/config/: __init__.py  loader.py  schemas.py
loop_sci/engine/: __init__.py  agent_runtime.py  coordinator.py  executor.py  tools.py  types.py
loop_sci/events/: __init__.py
loop_sci/hypothesis/: __init__.py  config.py  coordinator.py  executor.py  ledger.py  ranked.py  schemas.py  scoring.py  tools.py
loop_sci/literature/: __init__.py  executor.py  tools.py
loop_sci/plan/: __init__.py  config.py  executor.py  fields.py  gate.py  references.py  render.py  results.py  schemas.py  tools.py
loop_sci/provider/: __init__.py  credentials.py  errors.py  factory.py  tool_protocol.py
loop_sci/state/: __init__.py  idea_tree.py  session.py
tests/: conftest.py
tests/integration/: test_coordinator_cycle.py  test_hypothesis_pipeline.py  test_lit_miner_e2e.py  test_plan_assembler_e2e.py
tests/live/: test_hypothesis_live.py  test_lit_miner_live.py  test_live_e2e.py  test_live_qwen.py  test_plan_assembler_live.py
tests/unit/: test_agent_runtime.py  test_cli.py  test_config.py  test_coordinator.py  test_event_bus.py  test_executor.py  test_idea_tree.py  test_provider.py  test_scaffold.py  test_session.py  test_tool_registry.py  test_vendor_imports.py
(+133 files in other folders)
