[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-sci"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.scripts]
loop-sci = "loop_sci.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["loop_sci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires DASHSCOPE_API_KEY; skipped in CI",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.10",
]
