[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop-sci"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "defusedxml>=0.7",
]

[project.scripts]
loop-sci = "loop_sci.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["loop_sci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: requires DASHSCOPE_API_KEY; skipped in CI",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["loop_sci"]
omit = [
    "loop_sci/_vendor/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
extend-exclude = ["loop_sci/_vendor"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
# E402: module-level imports not at top — test files intentionally group imports by section
per-file-ignores = { "tests/**" = ["E402"] }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.10",
]
